product_docs/docs/pgd/5.7/cli/command_ref/group/get-option.mdx
---
title: pgd group get-option
navTitle: Get Option
deepToC: true
---

## Synopsis

The `pgd group get-option` command is used to get group-level options in the EDB Postgres Distributed cluster.

## Syntax

```plaintext
pgd group <GROUP_NAME> get-option [OPTIONS] <OPTION>
```

Where `<GROUP_NAME>` is the name of the group for which you want to get options.

And `<OPTION>` is the name of a specific group option you want to get. If no option is specified, . The following options are available:

### Group Options

| Option                     | Description                                                    |
|----------------------------|----------------------------------------------------------------|
| apply_delay                | The delay in applying changes to the group.                    |
| check_constraints          | Whether to check constraints in the group.                     |
| default_commit_scope       | The default commit scope of the group.                         |
| enable_proxy_routing       | Whether to enable proxy routing in the group.                  |
| enable_raft                | Whether to enable Raft in the group.                           |
| enable_wal_decoder         | Whether to enable the WAL decoder in the group.                |
| location                   | The location of the group.                                     |
| num_writers                | The number of writers in the group.                            |
| route_reader_max_lag       | The maximum lag for the reader in the group.                   |
| route_writer_max_lag       | The maximum lag for the writer in the group.                   |
| streaming_mode             | The streaming mode of the group.                               |
| route_writer_wait_flush    | The wait time for flushing the writer in the group.            |
| default_seqkind            | The default sequence kind of the group.                        |
| default_replica_identity   | The default replica identity of the group.                     |
| conflict_detection_method  | The conflict detection method of the group.                    |
| replay_progress_frequency  | The replay progress frequency of the group.                    |
| batch_inserts              | Whether to enable batch inserts in the group.                  |
| analytics_storage_location | The storage location for analytics in the group.               |
| analytics_autoadd_tables   | Whether to automatically add tables to analytics in the group. |

### Group Proxy Options

| Option                            | Description                                                               |
|-----------------------------------|---------------------------------------------------------------------------|
| proxy_listen_address              | The listen address for the proxy in the group.                            |
| proxy_listen_addresses            | The listen addresses for the proxy in the group.                          |
| proxy_listen_port                 | The listen port for the proxy in the group.                               |
| proxy_max_client_conn             | The maximum number of client connections for the proxy in the group.      |
| proxy_max_server_conn             | The maximum number of server connections for the proxy in the group.      |
| proxy_server_conn_timeout         | The server connection timeout for the proxy in the group.                 |
| proxy_server_conn_keepalive       | The server connection keepalive for the proxy in the group.               |
| proxy_fallback_node_groups        | The fallback node groups for the proxy in the group.                      |
| proxy_fallback_node_group_timeout | The fallback node group timeout for the proxy in the group.               |
| proxy_consensus_grace_period      | The consensus grace period for the proxy in the group.                    |
| proxy_read_listen_address         | The listen address for the read proxy in the group.                       |
| proxy_read_listen_addresses       | The listen addresses for the read proxy in the group.                     |
| proxy_read_listen_port            | The listen port for the read proxy in the group.                          |
| proxy_read_max_client_conn        | The maximum number of client connections for the read proxy in the group. |
| proxy_read_max_server_conn        | The maximum number of server connections for the read proxy in the group. |
| proxy_read_server_conn_keepalive  | The server connection keepalive for the read proxy in the group.          |
| proxy_read_server_conn_timeout    | The server connection timeout for the read proxy in the group.            |
| proxy_read_consensus_grace_period | The consensus grace period for the read proxy in the group.               |

When a value is shown followed by `(inherited)`, this means the value is not specifically set on the group, but is inherited from a parent group.

## Options

No command specific options. See [Global Options](/pgd/5.7/cli/command_ref/#global-options).

## Examples

```shell
pgd group dc1_subgroup get-option location
__OUTPUT__
Option Name Option Value
----------- ------------
location    London
```
